Fixed cut off last message on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 3rem;
+  margin-bottom: 1rem;
   align-items: center;
   color: #333c4d;
 }
